Put resume/pause button at center, toggle fullscreen button.

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,4 @@
 - select file
 - show text on volume/speed change on MPV screen
+- round speed to 0.1
+- allow to reconnect to mpv without restarting application when IPC dies
