--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,5 @@
 - switch audio track
 - move fullscreen button to top right
 - remove C:\soft\mpv\mpv.exe hardcoded path
+- seek to chapter marker
+- select file: start in directory from last file even if it was closed
