--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,5 @@
 - remove C:\soft\mpv\mpv.exe hardcoded path
 - seek to chapter marker
 - select file: start in directory from last file even if it was closed
+- dark mode by default
+- ctrl+c should close mpv
