--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,4 @@
 - seek to chapter marker
 - select file: start in directory from last file even if it was closed
 - update README.md with new build requirements
+- make flag for debug logs
