--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@
 - select file: start in directory from last file even if it was closed
 - update README.md with new build requirements
 - make flag for debug logs
+- make mpv go fullscreen command
